# music-player

./: .gitignore  CMakeLists.txt  CMakeLists1.txt
src/: cli_main.cpp
vlc/windows/: libvlccore.lib
